--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interface_2",
+  "name": "interface",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "react": "^17.0.1",
+    "react-awesome-button": "^6.5.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-scripts": "4.0.2",
@@ -38,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/zhenisduissekov/interface.git",
+  "author": "zhenisduissekov <zduissekov@gmail.com>",
+  "license": "MIT"
 }
